# python-fastapi-boilerplate

./: .gitignore  README.md  pyproject.toml  setup.cfg
app/: __init__.py  __main__.py
app/api/routes/: api.py
app/api/routes/test/: __init__.py  testapi.py
app/core/: config.py  events.py  model.py  utils.py
app/db/: events.py
app/module/: __init__.py  functions.py  model.py
tests/: base_test.py
