[tool.poetry]
name = "app"
version = "0.1.0"
description = "Boilerplate FastAPI"
authors = []

[tool.poetry.scripts]
run = "app.__main__:app"


[tool.taskipy.tasks]
dev = "DEBUG=True uvicorn app.__main__:app --host 0.0.0.0 --port 3000 --reload"
test = "python -m unittest discover tests"


[tool.poetry.dependencies]
python = "^3.6"
uvicorn = "^0.11.3"
fastapi = "^0.49.0"
loguru = "^0.4.1"
taskipy = "^1.1.3"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
pre-commit = "^2.0.1"
rope = "^0.16.0"


[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | requirements.txt
  | \.vscode
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
